--- a/boss.ini
+++ b/boss.ini
@@ -96,3 +96,10 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
+
+bossname = 고르쏜
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
