--- a/boss.ini
+++ b/boss.ini
@@ -1,85 +1,98 @@
 ﻿﻿-----일반보스-----
 bossname = 여왕개미
-gentime = 6:00
+gentime = 12:00
 nogencheck = 5
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 
 mungtime = 5
 
 bossname = 카스파
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다. 
 mungtime = 1
 
 bossname = 네크로스
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 대흑장로
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 네크로맨서
-gentime = 12:00
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 오르쿠스
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 크로울링
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 데스나이트
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 칼투란
-gentime = 6:00
+gentime = 12:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 거드
-gentime = 12:00
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 바포메트
-gentime = 12:00
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
 bossname = 커츠
-gentime = 12:00
+gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
+bossname = 라마슈
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 고르쏜
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
