--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -1,21 +1,21 @@
 ﻿-----고정보스-----
 bossname = 가로드
 bosstime = 11:45
-genPeriod = 02:00
+genPeriod = 04:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
 bossname = 님로드
 bosstime = 11:30
-genPeriod = 02:00
+genPeriod = 04:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
 bossname = 드레이크
 bosstime = 11:30
-genPeriod = 01:30
+genPeriod = 03:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
@@ -27,37 +27,30 @@ startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
-bossname = 드레이크
-bosstime = 12:30
-genPeriod = 24:00
-startDate = 2021-12-10
-before_alert_ment = 입니다
-alert_ment = 탐 입니다.
-
 bossname = 카르디쉬 
 bosstime = 12:45
-genPeriod = 02:00
+genPeriod = 04:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
 bossname = 울디아르
 bosstime = 10:15
-genPeriod = 02:00
+genPeriod = 04:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
 bossname = 쿠요
 bosstime = 02:45
-genPeriod = 01:30
+genPeriod = 03:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
 bossname = 라인
 bosstime = 00:00
-genPeriod = 01:00
+genPeriod = 02:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
@@ -78,7 +71,7 @@ alert_ment = 탐 입니다.
 
 bossname = 슬래셔
 bosstime = 04:00
-genPeriod = 3:00
+genPeriod = 6:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
@@ -90,10 +83,42 @@ startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 
+bossname = 모리티아
+bosstime = 12:15
+genPeriod = 04:00
+startDate = 2021-12-10
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+
+bossname = 맥켄
+bosstime = 16:30
+genPeriod = 03:00
+startDate = 2021-12-10
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+
+bossname = 참파와트
+bosstime = 13:00
+genPeriod = 03:00
+startDate = 2021-12-10
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+
 bossname = 아르피어
 bosstime = 18:30
 genPeriod = 24:00
 startDate = 2021-12-10
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
+
+bossname = 드레이크
+bosstime = 12:30
+genPeriod = 24:00
+startDate = 2021-12-10
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+
+
+
+
 
