--- a/boss.ini
+++ b/boss.ini
@@ -96,3 +96,32 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
+
+
+bossname = 알스카리아	
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 에오로트
+gentime = 08:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 라이오스		
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
+
+bossname = 하딘			
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다
+alert_ment = 탐 입니다.
+mungtime = 1
