--- a/boss.ini
+++ b/boss.ini
@@ -105,7 +105,7 @@ before_alert_ment = 입니다
 alert_ment = 탐 입니다.
 mungtime = 1
 
-bossname = 에오로트
+bossname = 에오르트
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다
